1. 공지사항 및 앱 아이콘, 이미지 작업

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="100개 이상"
+            android:text="@string/more_100"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/icon_full"
             app:layout_constraintLeft_toRightOf="@+id/icon_full"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="30개 이상 100개미만"
+            android:text="@string/less_100"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/icon_plenty"
             app:layout_constraintLeft_toRightOf="@+id/icon_plenty"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="2개 이상 30개 미만"
+            android:text="@string/less_30"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/icon_few"
             app:layout_constraintLeft_toRightOf="@+id/icon_few"
@@ -99,7 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="1개 이하"
+            android:text="@string/empty"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/icon_empty"
             app:layout_constraintLeft_toRightOf="@+id/icon_empty"
