--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#209b35</color>
+    <color name="colorPrimaryDark">#006b00</color>
+    <color name="colorAccent">#5dcd63</color>
+
     <color name="green">#00FF00</color>
     <color name="yellow">#FFFF00</color>
     <color name="red">#FF0000</color>
